--- a/NoteKeepingApp/NoteKeepingApp.csproj
+++ b/NoteKeepingApp/NoteKeepingApp.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBHelper.cs" />
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
     </Compile>
